[metadata]
name = axoproj
version = 0.0.3
description = A code to create datacubes from simple models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alois-deValon/Axoproj
author = A. de Valon
author_email = aloisdevalon@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    numpy>=1.15.0
    scipy>=1.1.0
python_requires = >=3.7
