[metadata]
name = axoproj
version = 1.0.0
description = A code to create datacubes from simple models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alois-deValon/Axoproj
author = A. de Valon
author_email = aloisdevalon@gmail.com
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    matplotlib>=3.4.2
    numpy>=1.15.0
    scipy>=1.1.0
    tqdm>=4.24.0
python_requires = >=3.8

[flake8]
exclude = *__init__.py
ignore = E203, E501, W503, E741
